[package]
name = "meteor-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = "0.10.2"
anyhow = "1.0.72"
bitvec = "1.0.1"
clap = { version = "4.3.16", features = ["derive"] }
env_logger = "0.10.0"
llm = { path = "lib/llm/crates/llm", features = [ "metal" ] }
log = { version = "0.4.19", features = ["max_level_debug", "release_max_level_warn"] }
partial_sort = "0.2.0"
rand = "0.8.5"
