[package]
name = "meteor-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
approx = "0.5.1"
bitvec = "1.0.1"
clap = { version = "4.3.16", features = ["derive"] }
env_logger = "0.10.0"
llm-samplers = "0.0.6"
log = { version = "0.4.19", features = ["max_level_debug", "release_max_level_warn"] }
partial_sort = "0.2.0"
rand = "0.8.5"

[profile.dev.package.ggml-sys]
opt-level = 3

[target.'cfg(all(target_os = "macos", target_arch = "aarch64"))'.dependencies.llm]
path = "lib/llm/crates/llm"
default-features = false
features = [ "models", "metal" ]


[target.'cfg(not(all(target_os = "macos", target_arch = "aarch64")))'.dependencies.llm]
path = "lib/llm/crates/llm"
default-features = false
features = [ "models" ]
